--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <div class="card">B</div>
 </div>
 <p>test</p>
-<p>test</p>
-<blockquote>test</blockquote>
+<blockquote>"La cerise sur le caca."</blockquote>
 <p>test</p>
 
 <div class="container">
